# MLProjectTemplate

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  template.py
config/: logging.json
scripts/: test.sh
src/MLProjectTemplate/: exception.py  logger.py
src/MLProjectTemplate/utils/: common.py
src/project_name/: exception.py  logger.py
src/project_name/constants/: __init__.py
src/project_name/utils/: common.py  decorators.py  exception.py  logger.py
