[tool.poetry]
name = "MLProjectTemplate"
version = "0.1.0"
description = "A Data Science project template with MLOps frameworks"
authors = ["Aashish Kumar <author_email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
pandas = "^1.3.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
mlflow = "^1.19.0"
dvc = "^2.0.18"
dagshub = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
